edited callback class