@@ -3,7 +3,6 @@ package com.bot.sup.service.callbackquery.impl;
 import com.bot.sup.model.common.CallbackEnum;
 import com.bot.sup.model.common.properties.message.ActivityMessageProperties;
 import com.bot.sup.model.common.properties.message.MainMessageProperties;
-import com.bot.sup.repository.RouteRepository;
 import com.bot.sup.service.callbackquery.Callback;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -12,36 +11,48 @@ import org.telegram.telegrambots.meta.api.methods.updatingmessages.EditMessageTe
 import org.telegram.telegrambots.meta.api.objects.CallbackQuery;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
+import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+import java.util.Set;
 
-import static com.bot.sup.model.common.CallbackEnum.DELETE_ACTIVITY;
+import static com.bot.sup.model.common.CallbackEnum.SUP_ACTIVITIES;
 
-@RequiredArgsConstructor
 @Service
-public class CallbackDeleteActivityImpl implements Callback {
-    private final MainMessageProperties mainMessageProperties;
+@RequiredArgsConstructor
+public class CallbackActivitiesImpl implements Callback {
     private final ActivityMessageProperties activityMessageProperties;
-    private final RouteRepository routeRepository;
+    private final MainMessageProperties mainMessageProperties;
 
-    public static final Set<CallbackEnum> ACTIVITIES = Set.of(DELETE_ACTIVITY);
+    public static final Set<CallbackEnum> ACTIVITIES = Set.of(SUP_ACTIVITIES);
 
     @Override
-    public BotApiMethod<?> getCallbackQuery(CallbackQuery callbackQuery) {
+    public BotApiMethod<?> getCallbackQuery(CallbackQuery callbackQuery) throws TelegramApiException {
         Long chatId = callbackQuery.getMessage().getChatId();
-        String activityId = callbackQuery.getData().split("/")[1];
-        deleteActivity(Long.parseLong(activityId));
 
-        return EditMessageText.builder().messageId(callbackQuery.getMessage().getMessageId())
-                .text(activityMessageProperties.getDeleteActivity())
+        return EditMessageText.builder()
                 .chatId(chatId)
-                .replyMarkup(createKeyboardForDeleteActivity())
+                .text(activityMessageProperties.getActivities())
+                .replyMarkup(inlineKeyboardMarkup())
                 .build();
     }
 
-    private InlineKeyboardMarkup createKeyboardForDeleteActivity() {
+    private InlineKeyboardMarkup inlineKeyboardMarkup() {
         List<List<InlineKeyboardButton>> buttons = new ArrayList<>();
-        buttons.add(Collections.singletonList(
+
+        buttons.add(List.of(
+                InlineKeyboardButton.builder()
+                        .text(activityMessageProperties.getListActivityFormat())
+                        .callbackData("SUP_ACTIVITY_FORMAT")
+                        .build()));
+        buttons.add(List.of(
+                InlineKeyboardButton.builder()
+                        .text(activityMessageProperties.getListActivityType())
+                        .callbackData("SUP_ACTIVITY_TYPE")
+                        .build()));
+        buttons.add(List.of(
                 InlineKeyboardButton.builder()
                         .text(mainMessageProperties.getMenu())
                         .callbackData("MENU")
@@ -50,10 +61,6 @@ public class CallbackDeleteActivityImpl implements Callback {
         return InlineKeyboardMarkup.builder()
                 .keyboard(buttons)
                 .build();
-    }
-
-    private void deleteActivity(Long chatId) {
-        routeRepository.deleteById(chatId);
     }
 
     @Override
